--- a/index.html
+++ b/index.html
@@ -14,11 +14,9 @@
     <header class="container text-center">
         <img src="img/avatar-perfil.jpeg" alt="avatar do Vinicius" class="rounded-circle" width="130" height="160"
             srcset="">
-        <p class="lead">Eu sou Vinícius</p>
-        <h1>Eu ensino Programação</h1>
-        <p>Sou Professor de ciências exatas. Ensino pensamento computacional para estudantes do Ensino
-            Fundamental e Médio. Ensino sobre pensamento computacional usando HTML, CSS e JavaScript. Veja os projetos
-            que já desenvolvi!</p>
+        <p class="lead">Eu sou vitor</p>
+        <h1>Eu estudo Programação</h1>
+        <p>Sou aluno do christino. Estou aprendendo programação, ja desenvolvi varios projetos e quero continuar e aprendendo o quanto mais.!</p>
         <p>Minhas habilidades</p>
         <div>
             <p class="badge bg-secondary">HTML</p>
