--- a/index.html
+++ b/index.html
@@ -206,9 +206,9 @@
         <h2>Entre em contato</h2>
         <div>
             <i class="bi bi-github"></i>
-            <a href="https://github.com/vini-bertuzzo">GitHub</a>
+            <a href="https://github.com/vitor300675">GitHub</a>
         </div>
-        <p class="my-5 text-center">© Copyright 2024. Produzido por Vinícius Bertuzzo</p>
+        <p class="my-5 text-center">© Copyright 2024. Produzido por Vitor</p>
     </footer>
 
     <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.2/dist/js/bootstrap.bundle.min.js"></script>
