--- a/index.html
+++ b/index.html
@@ -12,7 +12,7 @@
 
 <body>
     <header class="container text-center">
-        <img src="img/avatar-perfil.jpeg" alt="avatar do Vinicius" class="rounded-circle" width="130" height="160"
+        <img src="17507840896466226954057247317463.jpg" alt="avatar do Vitor" class="rounded-circle" width="130" height="160"
             srcset="">
         <p class="lead">Eu sou vitor</p>
         <h1>Eu estudo Programação</h1>
